[package]
name = "shahmaat"
description = "Online multiplayer chess game"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tokio = { version = "1.43", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
env_logger = "0.11"
serde_json = "1.0"
tokio-util = "0.7"
anyhow = "1.0"
http = "1.2"
log = "0.4"
